--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,15 @@
     <nav class="navbar navbar-light bg-light">
         <span class="navbar-brand mb-0 h1">Миссия Колонизация Марса</span>
         <a class="navbar-brand" href="#">Mars One</a>
+
+        {% if current_user.is_authenticated %}
+            <a class="navbar-brand" href="/logout">{{ current_user.name }} {{ current_user.surname }}</a>
+        {% else %}
+            <p>
+                <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
+                <a class="btn btn-success" href="/login">Войти</a>
+            </p>
+        {% endif %}
     </nav>
     <h4>И на Марсе будут яблони цвести!</h4>
     <main role="main" class="container">
