--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,9 @@
 
 {% block content %}
 <h2>Works log</h2>
+{% if current_user.is_authenticated %}
+    <a href="jobs" class="btn btn-secondary">Add job</a>
+{% endif %}
 {% for job in jobs%}
     <h3>Action # {{loop.index}}</h3>
     <div class="table-container">
