--- a/templates/register.html
+++ b/templates/register.html
@@ -68,9 +68,9 @@
         {% endfor %}
     </p>
     <p>
-        {{ form.specialty.label }}<br>
-        {{ form.specialty(class="form-control") }}<br>
-        {% for error in form.specialty.errors %}
+        {{ form.speciality.label }}<br>
+        {{ form.speciality(class="form-control") }}<br>
+        {% for error in form.speciality.errors %}
             <p class="alert alert-danger" role="alert">
                 {{ error }}
             </p>
