--- a/templates/base.html
+++ b/templates/base.html
@@ -16,8 +16,6 @@
 <header>
     <nav class="navbar navbar-light bg-light">
         <span class="navbar-brand mb-0 h1">Миссия Колонизация Марса</span>
-        <a class="navbar-brand" href="#">Mars One</a>
-
         {% if current_user.is_authenticated %}
             <a class="navbar-brand" href="/logout">{{ current_user.name }} {{ current_user.surname }}</a>
         {% else %}
@@ -26,6 +24,7 @@
                 <a class="btn btn-success" href="/login">Войти</a>
             </p>
         {% endif %}
+        <a class="navbar-brand" href="/">Mars One</a>
     </nav>
     <h4>И на Марсе будут яблони цвести!</h4>
     <main role="main" class="container">
