--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,9 @@
 
 {% block content %}
 <h2>Works log</h2>
+<a href="/departments" class="btn btn-secondary">Departments</a>
 {% if current_user.is_authenticated %}
-    <a href="jobs" class="btn btn-secondary">Add job</a>
+    <a href="/add_job" class="btn btn-secondary">Add job</a>
 {% endif %}
 {% for job in jobs%}
     <h3>Action # {{loop.index}}</h3>
@@ -22,12 +23,22 @@
                 <td>{{job.work_size}} hours</td>
                 <td>{{job.collaborators}}</td>
                 {% if job.is_finished %}
-                    <td style="background-color: #FFF0F2">Is finished</td>
+                    <td style="background-color: #DDFADA">Is finished</td>
                 {% else %}
                     <td style="background-color: #FFF0F2">Is not finished</td>
                 {% endif %}
             </tr>
         </table>
-</div>
+    </div>
+    {% if current_user.is_authenticated and (current_user.id == job.team_leader or current_user.id == 1) %}
+    <div class="btn-container">
+        <a href="/edit_job/{{ job.id }}" class="btn btn-warning">
+            Edit
+        </a>
+        <a href="/delete_job/{{ job.id }}" class="btn btn-danger">
+            Delete
+        </a>
+    </div>
+{% endif %}
 {% endfor %}
 {% endblock %}
