--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,22 +7,12 @@ span.navbar-brand {
     font-size: 36px;
 }
 
-h2 {
+h1.center, h2.center, h4.center {
     text-align: center;
 }
 
-td {
-    background-color: #E6E6FA;
-}
-
-th {
-    background-color: #D3D3D3;
-}
-
-.container {
-    padding-bottom: 50px;
-}
-
-.btn-container {
-    padding-top: 20px;
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
